--- a/IntermediateCSS/index.html
+++ b/IntermediateCSS/index.html
@@ -3,16 +3,38 @@
     <head>
         <title>Learn CSS</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Roboto|Russo+One&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container">
+<!--
         <h1 >H1-You are the CSS to my HTML</h1>
         <h2>H2-Anyone skate out there?</h2>
         <h3>H3-Random Text for class.</h3>
-             <div>
+-->
+        <div class="row">    
+        <div class="col-3">
             <img src="lion.png" class="borderimg">
         </div>
-<!--            <ul>
+        <div class="col-6">
+            <img src="lion.png" class="borderimg">
+        </div>
+        <div class="col-3">
+            <img src="lion.png" class="borderimg">
+        </div>
+            </div>
+            <div class="row">    
+        <div class="col-2">
+            <img src="lion.png" class="borderimg">
+        </div>
+        <div class="col-7">
+            <img src="lion.png" class="borderimg">
+        </div>
+        <div class="col-4">
+            <img src="lion.png" class="borderimg">
+        </div>
+            </div>
+       <!--            <ul>
                 <li>I love to Skate</li>
                 <li>MY favorite skate tricks</li>
                 <ol>
@@ -22,6 +44,7 @@
             </ul>
 -->
         </div>
+<!--
         <h1>H1- I should build a swing</h1>
         <h2> I hope i can build it right</h2>
         <div class="formatting">
@@ -33,6 +56,7 @@
         <div><mark>MARK my words..</mark></div>
 </div>
         <a href="#">Click Me Now</a>
+-->
         
         
     </body>    
